--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -1,9 +1,20 @@
 .parallax 
 {
-    background-image: url('../imagem/hokkaido.jpg'); 
-    min-height: 50px;  
+    background-image: url('../imagem/templo.jpg'); 
+    min-height: 15rem;  
     background-attachment: fixed; 
-    background-position: center; 
+    background-position: center;
+    margin-bottom: 1.5rem; 
     background-repeat: no-repeat; 
     background-size: cover; 
+}
+
+.zoom {
+    /*padding: 50px;*/
+    transition: transform .2s; /* Animation */
+    margin: 0 auto;
+}
+
+.zoom:hover {
+    transform: scale(1.04); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
