--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -18,3 +18,32 @@
 .zoom:hover {
     transform: scale(1.04); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+/*--------------------------------------footer---------------------------------------*/
+footer
+{
+    
+}
+/*--------------------------------------Questinário---------------------------------------*/
+
+
+div.form
+{
+    display: block;
+    text-align: center;
+}
+form
+{
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+#aqui
+{
+    margin-top: 1em;
+}
+#botoesForm
+{
+    margin-top: 2rem;
+    
+}
