correção do botão voltar no form do questionário

--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -1,49 +1,46 @@
-.parallax 
-{
-    background-image: url('../imagem/templo.jpg'); 
-    min-height: 15rem;  
-    background-attachment: fixed; 
+.parallax {
+    background-image: url('../imagem/templo.jpg');
+    min-height: 15rem;
+    background-attachment: fixed;
     background-position: center;
-    margin-bottom: 1.5rem; 
-    background-repeat: no-repeat; 
-    background-size: cover; 
+    margin-bottom: 1.5rem;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .zoom {
     /*padding: 50px;*/
-    transition: transform .2s; /* Animation */
+    transition: transform .2s;
+    /* Animation */
     margin: 0 auto;
 }
 
 .zoom:hover {
-    transform: scale(1.04); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.04);
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
+
 /*--------------------------------------footer---------------------------------------*/
-footer
-{
-    
-}
+
+
 /*--------------------------------------Questinário---------------------------------------*/
 
-
-div.form
-{
+div.form {
     display: block;
     text-align: center;
 }
-form
-{
+
+form {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
     text-align: left;
 }
-#aqui
-{
-    margin-top: 1em;
-}
-#botoesForm
-{
+
+#formquest {
     margin-top: 2rem;
-    
+}
+
+#botoesForm {
+    margin-top: 2rem;
 }
