--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -20,6 +20,11 @@
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
+footer .container p
+{
+    font-family: "Gentium Book Basic";
+}
+
 /*--------------------------------------footer---------------------------------------*/
 
 
