--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -20,14 +20,17 @@
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
+/*--------------------------------------footer--------------------------------------------*/
 footer .container p
 {
     font-family: "Gentium Book Basic";
 }
 
-/*--------------------------------------footer---------------------------------------*/
-
-
+/*--------------------------------------body----------------------------------------------*/
+body
+{
+    background-color: white;
+}
 /*--------------------------------------Questinário---------------------------------------*/
 
 div.form {
