--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -62,3 +62,9 @@ form
 {
     margin-top: 2rem;
 }
+
+/*-----------------------------------------Gráfico---------------------------------------*/
+#horizontalBar
+{
+    max-width: 85%;
+}
