desisti de colocar a textura no fundo

--- a/css/Mystyle.css
+++ b/css/Mystyle.css
@@ -39,6 +39,7 @@ footer .container p
     background-size: cover;
     background-position: center top;
 }*/
+/*
 body
 {
     
@@ -48,6 +49,7 @@ body
     background-attachment: fixed;
     
 }
+*/
 /*--------------------------------------Questinário---------------------------------------*/
 
 div.form 
